--- a/blog.html
+++ b/blog.html
@@ -97,7 +97,7 @@
               </div>
               <div class="blog_page_list_item_text_btn">
                 <div class="blog_page_list_item_text_btn_line"></div>
-                <span>Reed More</span>
+                <span>Read More</span>
               </div>
             </div>
           </a>
@@ -110,7 +110,7 @@
               </div>
               <div class="blog_page_list_item_text_btn">
                 <div class="blog_page_list_item_text_btn_line"></div>
-                <span>Reed More</span>
+                <span>Read More</span>
               </div>
             </div>
           </a>
@@ -123,7 +123,7 @@
               </div>
               <div class="blog_page_list_item_text_btn">
                 <div class="blog_page_list_item_text_btn_line"></div>
-                <span>Reed More</span>
+                <span>Read More</span>
               </div>
             </div>
           </a>
@@ -136,7 +136,7 @@
               </div>
               <div class="blog_page_list_item_text_btn">
                 <div class="blog_page_list_item_text_btn_line"></div>
-                <span>Reed More</span>
+                <span>Read More</span>
               </div>
             </div>
           </a>
@@ -149,7 +149,7 @@
               </div>
               <div class="blog_page_list_item_text_btn">
                 <div class="blog_page_list_item_text_btn_line"></div>
-                <span>Reed More</span>
+                <span>Read More</span>
               </div>
             </div>
           </a>
@@ -162,7 +162,7 @@
               </div>
               <div class="blog_page_list_item_text_btn">
                 <div class="blog_page_list_item_text_btn_line"></div>
-                <span>Reed More</span>
+                <span>Read More</span>
               </div>
             </div>
           </a>
@@ -202,7 +202,7 @@
           <div class="footer_block_mid">
             <h3>Contact Us</h3>
             <div class="footer_block_mid_link">
-              <a href="tel:+971508575168">+971 50 857 5168</a>
+              <a href="tel:+971586341110">+971 58 634 1110</a>
               <a href="mailto:info@casa-verse.com">info@casa-verse.com</a>
             </div>
             <p>1302, The One Tower, Barsha Heights Dubai, United Arab Emirates</p>
