--- a/neighborhoods.html
+++ b/neighborhoods.html
@@ -98,7 +98,7 @@
               <p>Experience an idyllic suburban lifestyle with family-friendly amenities, scenic landscape, and a welcoming community.</p>
               <div class="neighborhoods_page_block_item_text_btn">
                 <img src="img/neighborhoods_page/arrow.svg" alt="">
-                <span>Reed More</span>
+                <span>Read More</span>
               </div>
             </div>
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/1.jpg" alt="">
@@ -115,7 +115,7 @@
               <p>Experience an idyllic suburban lifestyle with family-friendly amenities, scenic landscape, and a welcoming community.</p>
               <div class="neighborhoods_page_block_item_text_btn">
                 <img src="img/neighborhoods_page/arrow.svg" alt="">
-                <span>Reed More</span>
+                <span>Read More</span>
               </div>
             </div>
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/2.jpg" alt="">
@@ -132,7 +132,7 @@
               <p>Experience an idyllic suburban lifestyle with family-friendly amenities, scenic landscape, and a welcoming community.</p>
               <div class="neighborhoods_page_block_item_text_btn">
                 <img src="img/neighborhoods_page/arrow.svg" alt="">
-                <span>Reed More</span>
+                <span>Read More</span>
               </div>
             </div>
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/3.jpg" alt="">
@@ -149,7 +149,7 @@
               <p>Experience an idyllic suburban lifestyle with family-friendly amenities, scenic landscape, and a welcoming community.</p>
               <div class="neighborhoods_page_block_item_text_btn">
                 <img src="img/neighborhoods_page/arrow.svg" alt="">
-                <span>Reed More</span>
+                <span>Read More</span>
               </div>
             </div>
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/4.jpg" alt="">
@@ -166,7 +166,7 @@
               <p>Experience an idyllic suburban lifestyle with family-friendly amenities, scenic landscape, and a welcoming community.</p>
               <div class="neighborhoods_page_block_item_text_btn">
                 <img src="img/neighborhoods_page/arrow.svg" alt="">
-                <span>Reed More</span>
+                <span>Read More</span>
               </div>
             </div>
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/5.jpg" alt="">
@@ -183,7 +183,7 @@
               <p>Experience an idyllic suburban lifestyle with family-friendly amenities, scenic landscape, and a welcoming community.</p>
               <div class="neighborhoods_page_block_item_text_btn">
                 <img src="img/neighborhoods_page/arrow.svg" alt="">
-                <span>Reed More</span>
+                <span>Read More</span>
               </div>
             </div>
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/6.jpg" alt="">
@@ -200,7 +200,7 @@
               <p>Experience an idyllic suburban lifestyle with family-friendly amenities, scenic landscape, and a welcoming community.</p>
               <div class="neighborhoods_page_block_item_text_btn">
                 <img src="img/neighborhoods_page/arrow.svg" alt="">
-                <span>Reed More</span>
+                <span>Read More</span>
               </div>
             </div>
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/7.jpg" alt="">
@@ -217,7 +217,7 @@
               <p>Experience an idyllic suburban lifestyle with family-friendly amenities, scenic landscape, and a welcoming community.</p>
               <div class="neighborhoods_page_block_item_text_btn">
                 <img src="img/neighborhoods_page/arrow.svg" alt="">
-                <span>Reed More</span>
+                <span>Read More</span>
               </div>
             </div>
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/8.jpg" alt="">
@@ -275,7 +275,7 @@
           <div class="footer_block_mid">
             <h3>Contact Us</h3>
             <div class="footer_block_mid_link">
-              <a href="tel:+971508575168">+971 50 857 5168</a>
+              <a href="tel:+971586341110">+971 58 634 1110</a>
               <a href="mailto:info@casa-verse.com">info@casa-verse.com</a>
             </div>
             <p>1302, The One Tower, Barsha Heights Dubai, United Arab Emirates</p>
