--- a/contacts.html
+++ b/contacts.html
@@ -91,7 +91,7 @@
           <div class="contacts_block_left">
             <h2>Contact Details</h2>
             <div class="contacts_block_left_info">
-              <a href="tel:971508575168">971 50 857 5168</a>
+              <a href="tel:+971586341110">+971 58 634 1110</a>
               <a href="mailto:info@casa-verse.com">info@casa-verse.com</a>
               <p>The One Tower, Barsha Heights, Dubai, United Arab Emirates</p>
             </div>
