--- a/neighborhoods_single.html
+++ b/neighborhoods_single.html
@@ -229,7 +229,7 @@
     <section class="map_neighborhoods">
       <div class="container">
         <div class="map_neighborhoods_block">
-          <iframe width="100%" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+          <iframe width="100%" height="400" src="https://maps.google.com/maps?width=700&amp;height=440&amp;hl=en&amp;q=the%20one%20tower%20dubai+(%D0%9D%D0%B0%D0%B7%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5)&amp;ie=UTF8&amp;t=&amp;z=10&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
         </div>
       </div>
     </section>
@@ -266,14 +266,14 @@
           <div class="footer_block_mid">
             <h3>Contact Us</h3>
             <div class="footer_block_mid_link">
-              <a href="tel:+971508575168">+971 50 857 5168</a>
+              <a href="tel:+971586341110">+971 58 634 1110</a>
               <a href="mailto:info@casa-verse.com">info@casa-verse.com</a>
             </div>
             <p>1302, The One Tower, Barsha Heights Dubai, United Arab Emirates</p>
           </div>
           <div class="footer_block_right">
             <h3>Location</h3>
-            <iframe width="100%" height="180" id="gmap_canvas" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+            <iframe width="100%" height="180" src="https://maps.google.com/maps?width=700&amp;height=440&amp;hl=en&amp;q=the%20one%20tower%20dubai+(%D0%9D%D0%B0%D0%B7%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5)&amp;ie=UTF8&amp;t=&amp;z=10&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
           </div>
         </div>
       </div>
