--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
       </div>
     </header>
 
-    <section class="about_main anime">
+    <section class="about_main about_main_us anime">
       <div class="about_main_block">
         <h2>About Us</h2>
         <svg class="about_anime_desk" width="250" height="15" viewBox="0 0 250 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -82,7 +82,7 @@
       </div>
     </section>
 
-    <section class="welcome">
+    <section class="welcome anime">
       <div class="container">
         <div class="welcome_block">
           <div class="welcome_block_top">
@@ -150,7 +150,7 @@
       </div>
     </section>
 
-    <section class="mission">
+    <section class="mission anime">
       <div class="container">
         <div class="mission_block">
           <div class="mission_block_wrap">
