--- a/blog.html
+++ b/blog.html
@@ -70,7 +70,7 @@
       </div>
     </header>
 
-    <section class="about_main anime">
+    <section class="about_main about_main_blog anime">
       <div class="container">
         <div class="about_main_block">
           <h2>Blog</h2>
