--- a/contacts.html
+++ b/contacts.html
@@ -77,11 +77,15 @@
       </div>
     </header>
 
-    <section class="about_main">
+    <section class="about_main about_main_contacts anime">
       <div class="about_main_block">
         <h2>Contact Us</h2>
-        <img class="desk" src="img/contacts/feature.svg" alt="">
-        <img class="mob" src="img/contacts/feature_mob.svg" alt="">
+        <svg class="about_anime_desk" width="250" height="15" viewBox="0 0 250 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M249 9.87834C162.359 10.3936 -8.45738 9.98142 1.40969 4.21041C13.7435 -3.00335 275.038 2.66435 229.814 14" stroke="#A5FECB" stroke-width="2" stroke-linecap="round"/>
+        </svg>
+        <svg class="about_anime_mob" width="116" height="10" viewBox="0 0 116 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M115 6.46359C75.1729 6.78068 -3.34735 6.52703 1.18833 2.97564C6.85791 -1.4636 126.969 2.02422 106.181 8.99998" stroke="#A5FECB" stroke-width="2" stroke-linecap="round"/>
+        </svg>
       </div>
     </section>
 
