--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
           <h2>Featured Properties</h2>
           <div class="featured_nav_arrows">
             <div class="featured_nav_arrows_left">
-              <img src="img/featured/prev.svg" alt="">
+              <div class="arrow_triangle prev"></div>
             </div>
             <div class="featured_nav_arrows_right">
-              <img src="img/featured/next.svg" alt="">
+              <div class="arrow_triangle next"></div>
             </div>
           </div>
         </div>
@@ -609,18 +609,18 @@
         </div>
         <div class="testimonials_mob_arrows">
           <div class="testimonials_mob_arrows_prev">
-            <img src="img/testimonials/prev.svg" alt="">
+            <div class="arrow_triangle prev"></div>
           </div>
           <div class="testimonials_mob_arrows_next">
-            <img src="img/testimonials/next.svg" alt="">
+            <div class="arrow_triangle next"></div>
           </div>
         </div>
         <div class="testimonials_desk_arrows">
           <div class="testimonials_desk_arrows_prev">
-            <img src="img/testimonials/prev.svg" alt="">
+            <div class="arrow_triangle prev"></div>
           </div>
           <div class="testimonials_desk_arrows_next">
-            <img src="img/testimonials/next.svg" alt="">
+            <div class="arrow_triangle next"></div>
           </div>
         </div>
       </div>
@@ -728,56 +728,22 @@
             <p>Casaverse is dedicated to representing properties of unparalleled distinction in Dubai. With a deep understanding of the local market and years of experience, we have been able to cater to the unique needs of our clients and help them find their dream properties. Whether you're looking to buy, sell, or rent a property, Casaverse is here to help you every step of the way.</p>
             <div class="footer_block_left_social">
               <a href="#">
-                <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <mask id="mask0_427_266" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="4" y="4" width="29" height="29">
-                  <rect x="4.47656" y="4.47632" width="28.35" height="28.35" rx="5.70069" fill="#D9D9D9"/>
-                  </mask>
-                  <g mask="url(#mask0_427_266)">
-                  <rect class="foot_link" x="4.47656" y="4.47632" width="28.35" height="28.35" rx="5.70069" fill="#00031E"/>
-                  <path d="M26.4226 9.32568C26.0104 9.32568 25.6151 9.48944 25.3236 9.78092C25.0321 10.0724 24.8684 10.4677 24.8684 10.88C24.8684 11.2922 25.0321 11.6875 25.3236 11.979C25.6151 12.2705 26.0104 12.4342 26.4226 12.4342C26.8349 12.4342 27.2302 12.2705 27.5217 11.979C27.8132 11.6875 27.9769 11.2922 27.9769 10.88C27.9769 10.4677 27.8132 10.0724 27.5217 9.78092C27.2302 9.48944 26.8349 9.32568 26.4226 9.32568ZM18.6513 10.88C14.3661 10.88 10.8799 14.3662 10.8799 18.6513C10.8799 22.9365 14.3661 26.4227 18.6513 26.4227C22.9364 26.4227 26.4226 22.9365 26.4226 18.6513C26.4226 14.3662 22.9364 10.88 18.6513 10.88ZM18.6513 13.9885C21.222 13.9885 23.3141 16.0806 23.3141 18.6513C23.3141 21.2221 21.222 23.3142 18.6513 23.3142C16.0805 23.3142 13.9884 21.2221 13.9884 18.6513C13.9884 16.0806 16.0805 13.9885 18.6513 13.9885Z" fill="white"/>
-                  </g>
-                </svg>
+                <img src="img/footer/instagram.svg" alt="">
               </a>
               <a href="#">
-                <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <mask id="mask0_427_270" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="5" y="4" width="29" height="29">
-                  <rect x="5.01562" y="4.47632" width="28.35" height="28.35" rx="5.70069" fill="#D9D9D9"/>
-                  </mask>
-                  <g mask="url(#mask0_427_270)">
-                  <rect class="foot_link" x="5.01562" y="4.47632" width="28.35" height="28.35" rx="5.70069" fill="#00031E"/>
-                  <path d="M20.513 22.9677V8.57959H23.4408C23.4408 10.9597 25.3596 12.8624 27.7696 12.896L27.7267 15.7737C26.0894 15.7508 24.6527 15.0971 23.4408 14.1747V22.9677C23.4408 26.1293 20.8018 28.723 17.5851 28.723C14.3684 28.723 11.7295 26.1293 11.7295 22.9677C11.7295 19.8062 14.3684 17.2125 17.5851 17.2125V20.0901C15.9504 20.0901 14.6573 21.3611 14.6573 22.9677C14.6573 24.5744 15.9504 25.8454 17.5851 25.8454C19.2198 25.8454 20.513 24.5744 20.513 22.9677Z" fill="white"/>
-                  </g>
-                </svg>
+                <img src="img/footer/tiktok.svg" alt="">
               </a>
               <a href="#">
-                <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path class="foot_link" d="M33.6233 9.61493C33.2659 8.27826 32.2121 7.22446 30.8754 6.86697C28.4507 6.21729 18.7303 6.21729 18.7303 6.21729C18.7303 6.21729 9.00982 6.21729 6.58515 6.86697C5.24847 7.22446 4.19467 8.27826 3.83719 9.61493C3.1875 12.0396 3.1875 18.6515 3.1875 18.6515C3.1875 18.6515 3.1875 25.2634 3.83719 27.6881C4.19467 29.0247 5.24847 30.0785 6.58515 30.436C9.00982 31.0857 18.7303 31.0857 18.7303 31.0857C18.7303 31.0857 28.4507 31.0857 30.8754 30.436C32.2136 30.0785 33.2659 29.0247 33.6233 27.6881C34.273 25.2634 34.273 18.6515 34.273 18.6515C34.273 18.6515 34.273 12.0396 33.6233 9.61493ZM15.6217 24.0355V13.2675L24.9474 18.6515L15.6217 24.0355Z" fill="#00031E"/>
-                </svg>
+                <img src="img/footer/youtube.svg" alt="">
               </a>
               <a href="#">
-                <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <mask id="mask0_427_274" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="5" y="4" width="29" height="29">
-                  <rect x="5.09473" y="4.47632" width="28.35" height="28.35" rx="5.70069" fill="#D9D9D9"/>
-                  </mask>
-                  <g mask="url(#mask0_427_274)">
-                  <path class="foot_link" d="M27.0411 4.66284H11.4984C8.06496 4.66284 5.28125 7.44655 5.28125 10.8799V26.4227C5.28125 29.8561 8.06496 32.6398 11.4984 32.6398H20.2349V21.8205H16.5933V17.5851H20.2349V14.4688C20.2349 10.8566 22.4436 8.88737 25.6671 8.88737C26.7536 8.88426 27.8385 8.94021 28.9187 9.05056V12.8275H26.6992C24.9428 12.8275 24.6009 13.6574 24.6009 14.8822V17.5789H28.7975L28.2519 21.8143H24.576V32.6398H27.0411C30.4745 32.6398 33.2582 29.8561 33.2582 26.4227V10.8799C33.2582 7.44655 30.4745 4.66284 27.0411 4.66284Z" fill="#00031E"/>
-                  </g>
-                </svg>
+                <img src="img/footer/facebook.svg" alt="">
               </a>
               <a href="#">
-                <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path class="foot_link" d="M26.5416 4.47632H11.0779C7.52518 4.47632 4.63477 7.36737 4.63477 10.9201V26.3818C4.63477 29.9353 7.52518 32.8263 11.0779 32.8263H26.5416C30.0944 32.8263 32.9848 29.9353 32.9848 26.3825V10.9195C32.9848 7.36673 30.0944 4.47632 26.5416 4.47632ZM26.0506 15.739C26.0571 15.8917 26.0609 16.0463 26.0609 16.2023C26.0609 20.9303 22.4701 26.3831 15.9045 26.3831C13.8891 26.3831 12.0122 25.791 10.4336 24.7749C10.7126 24.8084 10.9955 24.8245 11.2848 24.8245C12.9574 24.8245 14.4967 24.2537 15.717 23.2936C14.1552 23.2653 12.8382 22.2286 12.3827 20.8085C12.6011 20.8504 12.8247 20.8729 13.0554 20.8729C13.3807 20.8729 13.6965 20.8298 13.9948 20.7466C12.3634 20.4167 11.1334 18.9722 11.1334 17.2377C11.1334 17.2222 11.1334 17.2074 11.1334 17.1926C11.6147 17.4606 12.1643 17.6223 12.75 17.641C11.7912 16.998 11.1624 15.9039 11.1624 14.6623C11.1624 14.0064 11.3376 13.3924 11.6449 12.8628C13.4059 15.0277 16.036 16.4523 19.0018 16.6017C18.9406 16.3395 18.9083 16.067 18.9083 15.7867C18.9083 13.8106 20.5063 12.2081 22.4779 12.2081C23.5043 12.2081 24.4314 12.6424 25.0822 13.3383C25.8947 13.1778 26.6595 12.8802 27.3489 12.4704C27.0828 13.3048 26.5165 14.0064 25.7787 14.4497C26.5016 14.3621 27.1885 14.1707 27.8296 13.8859C27.3521 14.6037 26.7471 15.2345 26.0506 15.739Z" fill="#00031E"/>
-                </svg>
+                <img src="img/footer/twitter.svg" alt="">
               </a>
               <a href="#">
-                <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <mask id="mask0_427_280" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="5" y="4" width="29" height="29">
-                  <rect x="5.17383" y="4.47632" width="28.35" height="28.35" rx="5.70069" fill="#D9D9D9"/>
-                  </mask>
-                  <g mask="url(#mask0_427_280)">
-                  <path class="foot_link" d="M29.0631 4.66284H9.63461C7.27833 4.66284 5.36035 6.58082 5.36035 8.9371V28.3656C5.36035 30.7218 7.27833 32.6398 9.63461 32.6398H29.0631C31.4194 32.6398 33.3373 30.7218 33.3373 28.3656V8.9371C33.3373 6.58082 31.4194 4.66284 29.0631 4.66284ZM14.686 26.4227C14.686 26.8525 14.3386 27.1999 13.9089 27.1999H11.5775C11.1477 27.1999 10.8003 26.8525 10.8003 26.4227V16.3199C10.8003 15.8902 11.1477 15.5428 11.5775 15.5428H13.9089C14.3386 15.5428 14.686 15.8902 14.686 16.3199V26.4227ZM12.7432 13.9885C11.6699 13.9885 10.8003 13.1189 10.8003 12.0457C10.8003 10.9724 11.6699 10.1028 12.7432 10.1028C13.8164 10.1028 14.686 10.9724 14.686 12.0457C14.686 13.1189 13.8164 13.9885 12.7432 13.9885ZM27.8974 26.4227C27.8974 26.8525 27.55 27.1999 27.1202 27.1999H24.7888C24.3591 27.1999 24.0117 26.8525 24.0117 26.4227V20.5942C24.0117 19.5225 23.1405 18.6513 22.0688 18.6513C20.9972 18.6513 20.126 19.5225 20.126 20.5942V26.4227C20.126 26.8525 19.7786 27.1999 19.3488 27.1999H17.0174C16.5877 27.1999 16.2403 26.8525 16.2403 26.4227V16.3199C16.2403 15.8902 16.5877 15.5428 17.0174 15.5428H19.3488C19.7786 15.5428 20.126 15.8902 20.126 16.3199V16.7403C20.9521 15.9982 22.0393 15.5428 23.2345 15.5428C25.8061 15.5428 27.8974 17.6341 27.8974 20.2056V26.4227Z" fill="#00031E"/>
-                  </g>
-                </svg>
+                <img src="img/footer/linked.svg" alt="">
               </a>
             </div>
           </div>
