--- a/neighborhoods_single.html
+++ b/neighborhoods_single.html
@@ -90,7 +90,7 @@
 
     <section class="neighborhoods_single">
       <div class="container">
-        <div class="neighborhoods_single_block">
+        <div class="neighborhoods_single_block anime">
           <div class="neighborhoods_single_block_left">
             <img src="img/neighborhoods_single/back.jpg" alt="">
           </div>
@@ -107,7 +107,7 @@
         </div>
         <div class="neighborhoods_single_list">
 
-          <div class="neighborhoods_single_list_item">
+          <div class="neighborhoods_single_list_item anime">
             <div class="neighborhoods_single_list_item_wrap">
               <img src="img/neighborhoods_single/icon_1.svg" alt="">
               <h4>Lifestyle</h4>
@@ -115,7 +115,7 @@
             </div>
           </div>
 
-          <div class="neighborhoods_single_list_item">
+          <div class="neighborhoods_single_list_item anime">
             <div class="neighborhoods_single_list_item_wrap">
               <img src="img/neighborhoods_single/icon_2.svg" alt="">
               <h4>Dining, Entertainment, and Shopping</h4>
@@ -123,7 +123,7 @@
             </div>
           </div>
 
-          <div class="neighborhoods_single_list_item">
+          <div class="neighborhoods_single_list_item anime">
             <div class="neighborhoods_single_list_item_wrap">
               <img src="img/neighborhoods_single/icon_3.svg" alt="">
               <h4>Things to Do</h4>
@@ -131,7 +131,7 @@
             </div>
           </div>
 
-          <div class="neighborhoods_single_list_item">
+          <div class="neighborhoods_single_list_item anime">
             <div class="neighborhoods_single_list_item_wrap">
               <img src="img/neighborhoods_single/icon_4.svg" alt="">
               <h4>Schools</h4>
