--- a/properties.html
+++ b/properties.html
@@ -72,7 +72,7 @@
       </div>
     </header>
 
-    <section class="about_main neigh anime">
+    <section class="about_main about_main_prop anime">
       <div class="container">
         <div class="about_main_block">
           <h2>Featured Properties</h2>
