--- a/properties_single.html
+++ b/properties_single.html
@@ -72,7 +72,7 @@
 
     <section class="properties_single">
         <div class="container">
-            <div class="properties_single_wrap">
+            <div class="properties_single_wrap anime">
                 <div class="properties_single_wrap_slider">
                     <div class="properties_single_wrap_slider_item">
                         <img src="img/neighborhoods_single/1.png" alt="">
@@ -91,7 +91,7 @@
                     <img src="img/properties_single/next.svg" alt="">
                 </div>
             </div>
-            <div class="properties_single_info">
+            <div class="properties_single_info anime">
                 <div class="properties_single_info_left">
                     <div class="properties_single_info_left_top">
                         <span class="thin">MLS® ID</span>
@@ -132,7 +132,7 @@
         </div>
     </section>
 
-    <section class="amenities">
+    <section class="amenities anime">
         <div class="container">
             <h2>FEATURES & AMENITIES</h2>
             <div class="amenities_nav">
@@ -368,17 +368,17 @@
     </footer>
   
     <div class="footer_under">
-    <div class="container">
-        <div class="footer_under_block">
-        <div class="footer_under_block_left">
-            <a href="#">Terms of Use</a>
-            <a href="#">Privacy Policy</a>
-        </div>
-        <div class="footer_under_block_right">
-            <p>2023. Casaverse. All Rights Reserved</p>
-        </div>
-        </div>
-    </div>
+      <div class="container">
+          <div class="footer_under_block">
+          <div class="footer_under_block_left">
+              <a href="#">Terms of Use</a>
+              <a href="#">Privacy Policy</a>
+          </div>
+          <div class="footer_under_block_right">
+              <p>2023. Casaverse. All Rights Reserved</p>
+          </div>
+          </div>
+      </div>
     </div>
     
     <script src="js/jquery-3.6.0.min.js"></script>
