--- a/neighborhoods.html
+++ b/neighborhoods.html
@@ -87,7 +87,7 @@
       <div class="container">
         <div class="neighborhoods_page_block">
 
-          <a class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/1.jpg), #D9D9D9;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Dubai <br> Marina</h3>
               <svg class="one_feature_animation" width="134" height="68" viewBox="0 0 134 68" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -101,10 +101,9 @@
                 <span>Read More</span>
               </div>
             </div>
-            <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/1.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/2.jpg), #D9D9D9;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Arabian <br> Ranches</h3>
               <svg class="two_feature_animation" width="186" height="100" viewBox="0 0 186 100" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -118,10 +117,9 @@
                 <span>Read More</span>
               </div>
             </div>
-            <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/2.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/3.jpg), #D9D9D9;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Palm <br>Jumeirah</h3>
               <svg class="three_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -135,10 +133,9 @@
                 <span>Read More</span>
               </div>
             </div>
-            <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/3.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/4.jpg), #D9D9D9;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>DAMAC <br>Lagoons</h3>
               <svg class="four_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -152,10 +149,9 @@
                 <span>Read More</span>
               </div>
             </div>
-            <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/4.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/5.jpg), #D9D9D9;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Canal <br>Heights</h3>
               <svg class="five_feature_animation" width="129" height="90" viewBox="0 0 129 90" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -169,10 +165,9 @@
                 <span>Read More</span>
               </div>
             </div>
-            <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/5.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/6.jpg), #D9D9D9;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>District <br>One</h3>
               <svg class="three_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -186,10 +181,9 @@
                 <span>Read More</span>
               </div>
             </div>
-            <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/6.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/7.jpg), #D9D9D9;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Dubai <br>Harbour</h3>
               <svg class="two_feature_animation" width="186" height="100" viewBox="0 0 186 100" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -203,10 +197,9 @@
                 <span>Read More</span>
               </div>
             </div>
-            <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/7.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/8.jpg), #D9D9D9;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Downtown Burj <br> Khalifa</h3>
               <svg class="four_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -220,7 +213,6 @@
                 <span>Read More</span>
               </div>
             </div>
-            <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/8.jpg" alt="">
           </a>
 
         </div>
