--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
       </div>
     </section>
 
-    <section class="testimonials">
+    <section class="testimonials anime">
       <div class="container">
         <h2>Testimonials</h2>
         <div class="testimonials_mob">
