--- a/neighborhoods.html
+++ b/neighborhoods.html
@@ -87,23 +87,25 @@
       <div class="container">
         <div class="neighborhoods_page_block">
 
-          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/1.jpg), #D9D9D9;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
-            <div class="neighborhoods_page_block_item_title">
-              <h3>Dubai <br> Marina</h3>
-              <svg class="one_feature_animation" width="134" height="68" viewBox="0 0 134 68" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M1.90363 66.2127C2.37651 35.1958 6.67586 -10.381 55.0891 24.6699C64.1898 -2.41776 113.343 -18.8503 132.448 47.7127" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>
-            </div>
-            <div class="neighborhoods_page_block_item_text">
-              <p>Experience an idyllic suburban lifestyle with family-friendly amenities, scenic landscape, and a welcoming community.</p>
-              <div class="neighborhoods_page_block_item_text_btn">
-                <img src="img/neighborhoods_page/arrow.svg" alt="">
-                <span>Read More</span>
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/1.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+            <div class="neighborhoods_page_block_item_wrap">
+              <div class="neighborhoods_page_block_item_title">
+                <h3>Dubai <br> Marina</h3>
+                <svg class="one_feature_animation" width="134" height="68" viewBox="0 0 134 68" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M1.90363 66.2127C2.37651 35.1958 6.67586 -10.381 55.0891 24.6699C64.1898 -2.41776 113.343 -18.8503 132.448 47.7127" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </div>
+              <div class="neighborhoods_page_block_item_text">
+                <p>Experience an idyllic suburban lifestyle with family-friendly amenities, scenic landscape, and a welcoming community.</p>
+                <div class="neighborhoods_page_block_item_text_btn">
+                  <img src="img/neighborhoods_page/arrow.svg" alt="">
+                  <span>Read More</span>
+                </div>
               </div>
             </div>
           </a>
 
-          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/2.jpg), #D9D9D9;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/2.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Arabian <br> Ranches</h3>
               <svg class="two_feature_animation" width="186" height="100" viewBox="0 0 186 100" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -119,7 +121,7 @@
             </div>
           </a>
 
-          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/3.jpg), #D9D9D9;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/3.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Palm <br>Jumeirah</h3>
               <svg class="three_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -135,7 +137,7 @@
             </div>
           </a>
 
-          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/4.jpg), #D9D9D9;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/4.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>DAMAC <br>Lagoons</h3>
               <svg class="four_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -151,7 +153,7 @@
             </div>
           </a>
 
-          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/5.jpg), #D9D9D9;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/5.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Canal <br>Heights</h3>
               <svg class="five_feature_animation" width="129" height="90" viewBox="0 0 129 90" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -167,7 +169,7 @@
             </div>
           </a>
 
-          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/6.jpg), #D9D9D9;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/6.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>District <br>One</h3>
               <svg class="three_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -183,7 +185,7 @@
             </div>
           </a>
 
-          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/7.jpg), #D9D9D9;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/7.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Dubai <br>Harbour</h3>
               <svg class="two_feature_animation" width="186" height="100" viewBox="0 0 186 100" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -199,7 +201,7 @@
             </div>
           </a>
 
-          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/8.jpg), #D9D9D9;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/8.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Downtown Burj <br> Khalifa</h3>
               <svg class="four_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -296,7 +298,21 @@
     
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/slick.js"></script>
+    <script src="js/tilt.jquery.js"></script>
     <script src="js/main.js"></script>
     
   </body>
 </html>
+
+
+<script>
+
+  if ($(window).width() > 1199) {
+    $('.neighborhoods_page_block_item').tilt({
+      glare: true,
+      maxGlare: .2
+    });
+  }
+
+  
+</script>
