--- a/neighborhoods.html
+++ b/neighborhoods.html
@@ -310,6 +310,7 @@
   if ($(window).width() > 1199) {
     $('.neighborhoods_page_block_item').tilt({
       glare: true,
+      maxTilt: 5,
       maxGlare: .2
     });
   }
