--- a/about.html
+++ b/about.html
@@ -165,11 +165,19 @@
       </div>
     </section>
 
-    <section class="vision">
+    <section class="vision anime">
       <div class="container">
         <div class="vision_block">
           <div class="vision_block_wrap">
-            <h2>Our Vision</h2>
+            <h2>
+              Our Vision
+              <svg class="vision_block_wrap_mob" width="157" height="50" viewBox="0 0 157 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M143.572 12.0724C131.316 7.03055 118.099 4.61646 104.983 2.83767C78.8345 -0.702605 50.5796 0.515987 25.6527 9.63522C20.2129 11.6219 14.9748 14.1573 10.2172 17.4203C5.18079 20.8682 -2.06238 28.2895 2.38674 34.6828C3.56131 36.3692 5.30536 37.5935 7.10281 38.6215C18.0536 44.882 31.2764 46.4413 43.6924 47.5155C71.8345 49.9585 100.487 49.5311 128.415 45.1477C135.665 44.0099 143.252 42.8318 149.765 39.355C151.664 38.3386 153.538 37.0276 154.41 35.1044C157.044 29.3002 150.258 23.7674 145.868 21.105C133.399 13.5278 118.616 11.5122 104.272 10.0741" stroke="#A5FECB" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"/>
+              </svg>
+              <svg class="vision_block_wrap_desk" width="263" height="76" viewBox="0 0 263 76" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M241.706 18.07C221.015 10.2971 198.7 6.57538 176.556 3.83307C132.409 -1.62485 84.7058 0.253814 42.6214 14.3126C33.4373 17.3755 24.5938 21.2842 16.5615 26.3147C8.05848 31.6302 -4.17025 43.0713 3.34125 52.9276C5.32429 55.5275 8.2688 57.415 11.3034 58.9999C29.7918 68.6514 52.1159 71.0554 73.078 72.7114C120.591 76.4777 168.965 75.8188 216.117 69.061C228.356 67.3069 241.165 65.4906 252.162 60.1306C255.367 58.5636 258.532 56.5425 260.004 53.5776C264.451 44.6294 252.994 36.0998 245.582 31.9952C224.53 20.3137 199.572 17.2063 175.355 14.9893" stroke="#A5FECB" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"/>
+              </svg>
+            </h2>
             <p>Our vision is to be the most trusted and innovative real estate agency in Dubai, providing personalized services that exceed our clients' expectations.</p>
             <img class="star_one" src="img/vision/star_1.svg" alt="">
             <img class="star_two" src="img/vision/star_2.svg" alt="">
