--- a/neighborhoods.html
+++ b/neighborhoods.html
@@ -221,11 +221,24 @@
       </div>
     </section>
 
-    <section class="dream">
+    <section class="dream anime">
       <div class="container">
         <div class="dream_block">
           <div class="dream_block_wrap">
-            <h2>Find your <br> dream home</h2>
+            <h2>
+              <span>Find your <br> dream home</span>
+
+              <svg class="dream_mob_svg" width="115" height="52" viewBox="0 0 115 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M107.093 10.6364C92.4849 3.45212 56.2643 -5.53524 25.0096 8.03521C-11.9525 24.0838 3.35111 43.0354 17.7056 47.0534C27.7091 49.8535 74.3987 58.2015 105.702 36.6485C130.744 19.4062 93.1805 10.8841 71.2684 8.77839" stroke="#5433FF" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+
+              <svg class="dream_desk_svg" width="155" height="70" viewBox="0 0 155 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M144.626 14.1055C124.801 4.33488 75.6444 -7.88792 33.2274 10.5679C-16.9356 32.3939 3.83365 58.1681 23.3148 63.6326C36.891 67.4408 100.255 78.794 142.738 49.482C176.724 26.0324 125.745 14.4424 96.0071 11.5786" stroke="#5433FF" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+
+              <img class="dream_img" src="img/dream/polosy.svg" alt="">
+                
+            </h2>
             <a href="https://zudikhin.github.io/casaverse/">
               <span>BROWSE HOME</span>
             </a>
